--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.0.6",
     "axios": "^1.6.7",
     "express": "^4.18.2",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.2.6"
   }
 }
